<resources>
    <string name="location_data">Location Data</string>
    <string name="signal_data">Signal Data</string>
    <string name="app_name">Analytics</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="save_to_database">Save to Database</string>
    <string name="display">Display</string>
    <string name="get_location">Get Location</string>
    <string name="count_location">Count Location</string>
    <string name="location">Location</string>
    <string name="service">Service</string>
    <string name="app_info">App info</string>
    <string name="battery_info">Battery Info</string>
    <string name="icon">Icon</string>
    <string name="battery_usage">Battery Usage</string>
    <string name="info">Info</string>
    <string name="till_today">Till today</string>
    <string name="no_usage_recorded">No usage recorded</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="date">Mon, 14 Dec</string>
    <string name="pie_chart_size">200dp</string>
    <string name="day_wise">Day wise</string>
    <string name="network_usage">Network Usage</string>
    <string name="wifi_data_usage">550 MB</string>
    <string name="cellular_data_usage">10 MB</string>
    <string name="wifi">Wifi</string>
    <string name="start">FROM</string>
    <string name="pm">pm</string>
    <string name="_21_jan_2020">21, Jan 2020</string>
    <string name="end">TO</string>
    <string name="_11_00">11:00</string>
    <string name="device_usage">Device Usage</string>
    <string name="label">filter</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="delete_icon">delete Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="linkspeed"> MHz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="level">Level</string>
    <string name="default_font" translatable="false">sans-serif</string>
    <string name="strength">Strength</string>
    <string name="type">Type:</string>
    <string name="no_records_found">No records found</string>
    <string name="default_text">DEFAULT TEXT</string>
    <string name="select_date">select Date</string>
    <string name="time">Sl No</string>
    <string name="count">Count:</string>
    <string name="tillToday">Till Today</string>
    <string name="no_data">No Data</string>
    <string name="sort_direction_arrow">sort direction arrow</string>
    <string name="sort">Sort</string>
    <string name="zero">0</string>
    <string name="geohash">GeoHash</string>
    <string name="address">Address</string>
    <string name="location_icon">location icon</string>
    <string name="sort_by">Sort By</string>
    <string name="battery_drop_largest_first">Battery Drop (largest first)</string>
    <string name="selected">Selected</string>
    <string name="battery_drop_smallest_first">Battery Drop (smallest first)</string>
    <string name="package_name_a_to_z">Package Name (A to Z)</string>
    <string name="package_name_z_to_a">Package Name (Z to A)</string>
    <string name="user_apps">User apps:&#160;</string>
    <string name="_20">20</string>
    <string name="more">more</string>
    <string name="system_apps">System apps:&#160;</string>
    <string name="_percent">%</string>
    <string name="used">Used</string>
    <string name="frequent_apps">Frequent apps</string>
    <string name="_346_5_mb">346.5 MB</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="cellular">Cellular</string>
    <string name="_67_8_kb">67.8 KB</string>
    <string name="_24_mb">24 MB</string>
    <string name="_574_mb">574 MB</string>
</resources>