<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/location_icon" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/countText"
        app:layout_constraintStart_toEndOf="@id/locationIcon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/geoHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geohash"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".4"
            android:text="@string/address" />
    </LinearLayout>

    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/count"
        android:alpha=".4"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/count"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/zero"
        android:paddingStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>