<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.NetworkUsageActivity">

    <LinearLayout
        android:id="@+id/startContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_00"
                android:textAlignment="center"
                android:textColor="?attr/startBlue"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/startAMPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/pm"
                android:textAlignment="center"
                android:textColor="?attr/startBlue"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/_21_jan_2020"
            android:textColor="?attr/batteryTitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/endContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/startContainer"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp">

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_00"
                android:textAlignment="center"
                android:textColor="?attr/endOrange"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/endAMPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/pm"
                android:textAlignment="center"
                android:textColor="?attr/endOrange"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/_21_jan_2020"
            android:textColor="?attr/batteryTitle" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>