<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="?attr/cardBackground"
            card_view:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp">

                <TextView
                    android:id="@+id/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:text="@string/app_info"
                    android:textColor="?attr/batteryTitle"
                    android:textSize="20sp"
                    card_view:drawableStartCompat="@drawable/ic_twotone_system_update_24"
                    card_view:drawableTint="#83b899"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:backgroundTint="#83b899"
                    android:contentDescription="@string/more"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/usingProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/cardTitle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/pieChart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <!-- ProgressBar that represents a total of 100% -->
                        <ProgressBar
                            android:id="@+id/progressbarFirst"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="100"
                            android:progressDrawable="@drawable/stats_progressbar_first"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            card_view:layout_constraintTop_toTopOf="parent" />
                        <!-- ProgressBar that represents a chart slice, where "android:progress" is the % value of the slice -->
                        <ProgressBar
                            android:id="@+id/progressbarSecond"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="75"
                            android:progressDrawable="@drawable/stats_progressbar_second"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            card_view:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/label_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/system_apps" />

                            <TextView
                                android:id="@+id/label_1_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_20"
                                android:textColor="?attr/progressbarFirst"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/label_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_apps" />

                            <TextView
                                android:id="@+id/label_2_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_20"
                                android:textColor="?attr/progressbarSecond"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>
